--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -13,6 +13,10 @@
         completions."
     </string>
     <string name="title_activity_list">list</string>
+    <string name="title_tab1">list</string>
+    <string name="title_tab2">User</string>
+    <string name="title_tab3">Contact</string>
+    <string name="title_tab4">messenger</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
