--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -28,6 +28,11 @@
         <item>New Zealand</item>
         <item>India</item>
     </string-array>
+    <string-array name="gender_arrays">
+        <item>unknow</item>
+        <item>Male</item>
+        <item>Female</item>
+    </string-array>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
