#send mail when upgrade

--- a/server/src/main/resources/i18n/messages.properties
+++ b/server/src/main/resources/i18n/messages.properties
@@ -19,3 +19,10 @@ email.reset.title=NotEnd password reset
 email.reset.greeting=Dear {0}
 email.reset.text1=For your NotEnd account a password reset was requested, please click on the URL below to reset it:
 email.reset.text2=Regards,
+
+
+# Reset email
+email.transaction.title=Transaction infomation
+email.transacsiton.infomation=Transacsiton Infomation:
+email.transacsiton.amount=Amount: {0}
+email.transacsiton.payDate=Pay Date: {0}
