#config and send email

--- a/server/src/main/resources/i18n/messages.properties
+++ b/server/src/main/resources/i18n/messages.properties
@@ -26,3 +26,7 @@ email.transaction.title=Transaction infomation
 email.transacsiton.infomation=Transacsiton Infomation:
 email.transacsiton.amount=Amount: {0}
 email.transacsiton.payDate=Pay Date: {0}
+
+# remind
+email.remindUserPaying.title=Tài khoản sắp hết hạn trả phí!.
+email.sendingComeBack.title=Chúng tôi nhớ bạn!.
